# Nazara

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Nazara.changes  Nazara.spec  PACKAGERS.md  README.md  SECURITY.md  index.html  intro.html  output.json  output.txt  print.html  searchindex.js  toc.html  toc.js
.forgejo/: PULL_REQUEST_TEMPLATE.md
.forgejo/ISSUE_TEMPLATE/: bug_report.yaml  deprecation.yaml  epic.yaml  feature_request.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  deprecation.yaml  documentation_change.yaml  feature_request.md  feature_request.yaml
.github/workflows/: audit.yml  deploy-docs.yml  release-package.yml  style.yml  test.yml
.pre-commit-hooks/: audit.sh  clippy.sh  rustfmt.sh
.woodpecker/: audit.yml  deploy-docs.yml  main.yml  post_release.yml  style.yml  test.yml
api_client/: Cargo.toml
api_client/apis/: .circuits_api.rs.kate-swp  (+2 more)
contributors/: becoming_packager.html  contributing_workflow.html  dependencies.html  index.html  security.html  test_environment.html  test_vms.html
design/: 001-architecture.html  002-code_style.html  index.html
docs/: README.md  book.toml
maintainers/: api_update_workflow.html  index.html  release_workflow.html
scripts/: example.sh  setup_netbox_docker.py  suse.sh
src/: collectors.rs  configuration.rs  error.rs  lib.rs  main.rs  output.rs  publisher.rs
users/: configuration.html  index.html  install.html  plugins.html  registration.html  update.html
(+814 files in other folders)
