[package]
name = "netbox-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network-interface = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"

[dev-dependencies]
mockall = "0.11.4"
