[package]
name = "netbox-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
network-interface = "1.0.1"
reqwest = { version="0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.7.6"

[dev-dependencies]
mockall = "0.11.4"
