[package]
name = "nazara"
authors = ["Christopher Hock <christopher-hock@protonmail.com"]
version = "0.1.0"
edition = "2021"
description = "A CLI application to create and update machines and VMs in NetBox."
readme = "README.md"
repository = "https://github.com/The-Nazara-Project/Nazara"
license = "GPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
network-interface = "1.0.1"
reqwest = { version="0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.7.6"

[dev-dependencies]
mockall = "0.11.4"
